# 5minPATH

./: .env.example  .gitignore  Makefile  README.md  SECURITY.md  SHOWCASE.md  pyproject.toml
.github/workflows/: ci.yml
configs/: logging.yaml
configs/assets/: btc.yaml
configs/replay/: calibration_good_only_v1.json  comparison_1s.yaml  fee_slippage.yaml  quality_thresholds.yaml  snapshot_builder.yaml  task7_reference_comparison.yaml  window_quality_classifier_v1.json
configs/venues/: binance.yaml  bybit.yaml  chainlink.yaml  coinbase.yaml  kraken.yaml  okx.yaml  polymarket.yaml
dashboard/: README.md  app.py  sample_data.py
docs/: 01_canonical_schema_spine.md  02_window_reference_schema.md  03_replay_snapshot_schema.md  04_raw_normalized_feed_schema.md  05_capture_runbook.md  architecture_overview.md  command_map.md  current_capabilities.md  how_to_use.md  known_limitations.md  market_thesis.md
docs/baselines/: 12h_vs_24h_far_up_lean_up_diagnosis.md  20260316T101341416Z.md  20260317T033427850Z.md  20260320T071726065Z.md  20260321T131012752Z.md  20260324T040815584Z.md  20260325T052115572Z.md  20260326T055920480Z.md  20260326_binance_exclusion_audit.md  20260326_replay_vs_live_eligibility_parity.md  20260327T093850581Z.md  20260327_day4_binance_outlier_audit.md  (+32 more)
scripts/: README.md  analyze_clean_shadow_baseline_edge_comparison.py  analyze_clean_shadow_condition_panel.py  analyze_clean_shadow_delta_bucket_panel.py  analyze_clean_shadow_delta_gate_experiment.py  analyze_clean_shadow_min_edge_experiment.py  analyze_clean_shadow_wide_delta_interactions.py  analyze_day4_execution.py  analyze_day5_future_leak.py  analyze_edge_survival.py  analyze_shadow_execution.py  analyze_side_mismatch_audit.py  build_day.sh  evaluate_day.sh  run_checkpoint_refresh.sh  run_collectors.sh  run_day_analysis_chain.sh  run_day_fast_lane.sh  run_day_optimized_postrun.sh  run_shadow_live.sh
(+212 files in other folders)
